fixed coins amount , that player can reach maximum coin status bar, fixed height at css for mobile devices, sharkie now wakes up from long idle if he jumps or attacks ,fixed background music bug when game restarts

--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ canvas {
 @media (max-width: 950px) and (max-height: 500px) {
     canvas {
         width: 100%;
-        height: 100vh;
+        height: 94vh;
     }
 
     .instructions {
